@@ -2,8 +2,9 @@ tasksel (1.29) unstable; urgency=low
 
   * Fix translations of long descriptions. Unfortunaly, aj's dontmakemethink
     thing made me think. :-P
+  * No need to translate the Task fields after all.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 31 Jul 2003 21:54:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 31 Jul 2003 22:06:37 -0400
 
 tasksel (1.28) unstable; urgency=low
 
